# ToxSaveParser

./: CMakeLists.txt  README.md  main.cpp  nodeinfo.cpp  nodeinfo.h  sections.cpp  sections.h  utils.cpp  utils.h
